# sh_binary_bug

./: BUILD.bazel  bin.sh  dummy.bzl
