load("//:dummy.bzl", "dummy_rule")

sh_binary(
    name = "bin",
    srcs = ["bin.sh"],
    data = ["data.txt"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

genrule(
    name = "gen_foo",
    tools = [":bin"],
    outs = ["foo"],
    cmd = "$(location :bin) $@ 'hello world'",
)

dummy_rule(
    name = "dummy",
)
